--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -1,26 +1,79 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  --color-background: #C9C4AC;
+  --color-primary: #39321B;
+  --color-accent: #C69639;
+  --spacing-main: 60rem;
+  --breakpoint-main: 60rem;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--color-background);
+  color: var(--color-primary);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h1, h2{
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: var(--color-primary);
+}
+h2 span{
+  position: relative;
+  padding: 0 0.24rem;
+}
+h2 span::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 30%;
+  background-color: var(--color-accent);
+  z-index: -1;
+}
+h3 span::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 4px;
+  width: 100%;
+  height: 30%;
+  background-color: var(--color-accent);
+  z-index: -1;
+}
+
+main, header, footer {
+  position: relative;
+}
+
+main::before, header::before, footer::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  opacity: 0.03;
+  background-image: 
+    repeating-linear-gradient(
+      0deg,
+      transparent,
+      transparent 2px,
+      var(--color-primary) 2px,
+      var(--color-primary) 4px
+    ),
+    repeating-linear-gradient(
+      90deg,
+      transparent,
+      transparent 2px,
+      var(--color-primary) 2px,
+      var(--color-primary) 4px
+    );
+  background-size: 4px 4px;
+  mix-blend-mode: multiply;
 }
